<resources>
    <string name="app_name">SHAB</string>

    <string name="menu_main_enabled">Enabled</string>
    <string name="menu_main_maptoogle_showmap">Show map</string>
    <string name="menu_main_maptoogle_showinfo">Show info</string>
    <string name="menu_main_showrawlog">Show raw log</string>
    <string name="menu_main_settings">Settings</string>
    <string name="menu_main_permissions">Request permissions</string>
    <string name="menu_main_about">About…</string>

    <string name="layout_loading">loading</string>
    <string name="layout_main_infos_gps_status_label">GPS Status</string>
    <string name="layout_main_infos_latitude_label">Latitude</string>
    <string name="layout_main_infos_longitude_label">Longitude</string>
    <string name="layout_main_infos_altitude_label">Altitude</string>
    <string name="layout_main_infos_fixstatus_label">FIX Status</string>
    <string name="layout_main_infos_speed_label">Speed</string>
    <string name="layout_main_infos_angle_label">Angle</string>
    <string name="layout_main_infos_int_temp_label">Internal temp</string>
    <string name="layout_main_infos_ext_temp_label">External temp</string>
    <string name="layout_main_infos_ext_alt_label">External altitude</string>
    <string name="layout_main_image_progress_label">Image progress</string>

    <string name="title_activity_settings">Settings</string>
    <string name="layout_settings_reset_description">Reset</string>
    <string name="layout_settings_button_save">Save Settings</string>
    <string name="layout_settings_server_address_label">Server address</string>
    <string name="layout_settings_server_port_label">Server port</string>
    <string name="layout_settings_name_label">Name</string>

    <string name="layout_map_auto">Auto bounds and zoom</string>
    <string name="layout_map_type_normal">Map</string>
    <string name="layout_map_type_satellite">Earth</string>

    <string name="toast_settings_saved">Settings saved</string>
    <string name="toast_socket_reconnecting">Reconnecting socket</string>
    <string name="toast_permissions_granted">Permissions granted</string>
    <string name="toast_permissions_denied">Permissions denied</string>

    <string name="alert_permissions_title">Ask for permissions</string>
    <string name="alert_permissions_message">App require permission for GPS and device ID. Ask for permissions?</string>
    <string name="alert_permissions_button_positive">Yes</string>
    <string name="alert_permissions_button_negative">No</string>

</resources>
