<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin">

    <LinearLayout
        android:id="@+id/container_infos"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:orientation="vertical">

        <RelativeLayout
            android:id="@+id/container_infos_latitude"
            style="@style/main_infos_container">

            <TextView
                android:id="@+id/infos_latitude_label"
                style="@style/main_infos_label"
                android:text="@string/layout_main_infos_latitude_label" />

            <TextView
                android:id="@+id/infos_latitude_value"
                style="@style/main_infos_value"
                android:text="@string/layout_loading" />
        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/container_infos_longitude"
            style="@style/main_infos_container">

            <TextView
                android:id="@+id/infos_longitude_label"
                style="@style/main_infos_label"
                android:text="@string/layout_main_infos_longitude_label" />

            <TextView
                android:id="@+id/infos_longitude_value"
                style="@style/main_infos_value"
                android:text="@string/layout_loading" />
        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/container_infos_altitude"
            style="@style/main_infos_container">

            <TextView
                android:id="@+id/infos_altitude_label"
                style="@style/main_infos_label"
                android:text="@string/layout_main_infos_altitude_label" />

            <TextView
                android:id="@+id/infos_altitude_value"
                style="@style/main_infos_value"
                android:text="@string/layout_loading" />
        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/container_infos_speed"
            style="@style/main_infos_container">

            <TextView
                android:id="@+id/infos_speed_label"
                style="@style/main_infos_label"
                android:text="@string/layout_main_infos_speed_label" />

            <TextView
                android:id="@+id/infos_speed_value"
                style="@style/main_infos_value"
                android:text="@string/layout_loading" />
        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/container_infos_angle"
            style="@style/main_infos_container">

            <TextView
                android:id="@+id/infos_angle_label"
                style="@style/main_infos_label"
                android:text="@string/layout_main_infos_angle_label" />

            <TextView
                android:id="@+id/infos_angle_value"
                style="@style/main_infos_value"
                android:text="@string/layout_loading" />
        </RelativeLayout>
    </LinearLayout>

    <RelativeLayout
        android:id="@+id/infos_image_container"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true">

        <ImageView
            android:id="@+id/infos_image"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:adjustViewBounds="true"
            android:src="@drawable/shab_image_empty" />
    </RelativeLayout>
</RelativeLayout>
