<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".activity.SettingsActivity">

    <ScrollView
        android:id="@+id/scroll_container"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:id="@+id/settings_container"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <RelativeLayout
                android:id="@+id/settings_server_address_container"
                style="@style/settings_item_container">

                <TextView
                    android:id="@+id/settings_server_address_label"
                    style="@style/settings_item_label"
                    android:text="@string/layout_settings_server_address_label" />

                <RelativeLayout
                    android:id="@+id/settings_server_address_value_container"
                    style="@style/settings_item_value_container"
                    android:layout_below="@id/settings_server_address_label">

                    <EditText
                        android:id="@+id/settings_server_address_value"
                        style="@style/settings_item_value"
                        android:layout_toStartOf="@+id/settings_server_address_reset"
                        android:inputType="text"
                        android:text="@string/layout_loading" />

                    <ImageButton
                        android:id="@+id/settings_server_address_reset"
                        style="@style/settings_item_reset"
                        android:contentDescription="@string/layout_settings_reset_description"
                        android:src="@drawable/settings_reset" />
                </RelativeLayout>
            </RelativeLayout>

            <RelativeLayout
                android:id="@+id/settings_server_port_container"
                style="@style/settings_item_container">

                <TextView
                    android:id="@+id/settings_server_port_label"
                    style="@style/settings_item_label"
                    android:text="@string/layout_settings_server_port_label" />

                <RelativeLayout
                    android:id="@+id/settings_server_port_value_container"
                    style="@style/settings_item_value_container"
                    android:layout_below="@id/settings_server_port_label">

                    <EditText
                        android:id="@+id/settings_server_port_value"
                        style="@style/settings_item_value"
                        android:layout_toStartOf="@+id/settings_server_port_reset"
                        android:inputType="text"
                        android:text="@string/layout_loading" />

                    <ImageButton
                        android:id="@+id/settings_server_port_reset"
                        style="@style/settings_item_reset"
                        android:contentDescription="@string/layout_settings_reset_description"
                        android:src="@drawable/settings_reset" />
                </RelativeLayout>
            </RelativeLayout>

            <RelativeLayout
                android:id="@+id/settings_name_container"
                style="@style/settings_item_container">

                <TextView
                    android:id="@+id/settings_name_label"
                    style="@style/settings_item_label"
                    android:text="@string/layout_settings_name_label" />

                <RelativeLayout
                    android:id="@+id/settings_name_value_container"
                    style="@style/settings_item_value_container"
                    android:layout_below="@id/settings_name_label">

                    <EditText
                        android:id="@+id/settings_name_value"
                        style="@style/settings_item_value"
                        android:layout_toStartOf="@+id/settings_name_reset"
                        android:inputType="text"
                        android:text="@string/layout_loading" />

                    <ImageButton
                        android:id="@+id/settings_name_reset"
                        style="@style/settings_item_reset"
                        android:contentDescription="@string/layout_settings_reset_description"
                        android:src="@drawable/settings_reset" />
                </RelativeLayout>
            </RelativeLayout>

            <Button
                android:id="@+id/settings_button_save"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/layout_settings_button_save" />
        </LinearLayout>
    </ScrollView>

</RelativeLayout>
